@@ -1,3 +1,14 @@
+Thu Dec 17 03:15:25 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (vm_call_method_each_type): should not set fastpath
+	  with keyword arguments for VM_METHOD_TYPE_ATTRSET type methods.
+
+	  Normally, we can not use keyword arguments for this kind of methods,
+	  (obj.foo = 1), but we can set alias names for them.
+	  [Bug #11657]
+
+	* test/ruby/test_keyword.rb: add a test for this fix.
+
 Wed Dec 16 20:32:43 2015  CHIKANAGA Tomoyuki  <nagachika@ruby-lang.org>
 
 	* ext/fiddle/handle.c: check tainted string arguments.
